--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,33 +1,98 @@
-.pusher {
-  width: 100%;
+/* --- base */
+
+/* :root {
+  --content-width: 720px;
+} */
+
+body {
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
 }
 
-.pusher.red {
-  background: red;
+/* --- layout */
+
+.grid-container {
+  display: grid;
+  /* grid-template-rows: 1fr auto 2fr; */
+  /* grid-template-columns: 1fr 660px 300px 1fr; */
+  grid-template-areas:
+  "ads-site-top      ads-site-top      ads-site-top      ads-site-top"
+  "header            header            header            header"
+  "graph             graph             graph             graph"
+  "main              main              main              aside"
+  "ads-site-bottom   ads-site-bottom   ads-site-bottom   ads-site-bottom"
+  "footer            footer            footer            footer";
+  grid-row-gap: 1rem;
+  grid-column-gap: 1rem;
 }
 
-.pusher.green {
-  background: green;
+.grid-container > * {
+  border: 1px dashed navy;
 }
 
-.pusher.blue {
-  background: blue;
+.grid-ads-site-top {
+  grid-area: ads-site-top;
+  /* margin-bottom: -1rem; */
 }
 
-.push-1-vh {
-  height: 100vh;
+.grid-header {
+  grid-area: header;
 }
 
-.push-2-vh {
-  height: 200vh;
+.grid-graph {
+  grid-area: graph;
 }
 
-.push-3-vh {
-  height: 300vh;
+.grid-main {
+  grid-area: main;
 }
 
-.fix-to-center-top {
-  position: fixed;
-  left: 50%;
-  top: 20px;
+.grid-aside {
+  grid-area: aside;
 }
+
+.grid-ads-site-bottom {
+  grid-area: ads-site-bottom;
+}
+
+.grid-footer {
+  grid-area: footer;
+}
+
+/* --- theme */
+
+.site-header {
+  /* padding: 1.5rem 0; */
+  /* background-color: midnightblue; */
+  /* color: snow; */
+}
+.site-header > h1 ,
+.site-header > p {
+  /* margin: 0; */
+}
+
+.navbar {
+  /* display: flex; */
+  /* justify-content: space-between; */
+}
+.navbar-brand {}
+.navbar-items {}
+.navbar-item {}
+.navbar-item.current {}
+
+.timeline {}
+.timeline > div {
+  text-align: center;
+  float: left;
+  clear: both;
+  margin-bottom: 2px;
+}
+.timeline > div > p { line-height: 1; margin: 0.25rem 0; font-size: 10px; }
+
+.ff-impressionviewable { background-color: royalblue; }
+.ff-slotonload { background-color: peru; }
+.ff-slotrenderended { background-color: teal; }
+.ff-slotrequested { background-color: gold; }
+.ff-slotresponsereceived { background-color: deeppink; }
+.ff-slotvisibilitychanged { background-color: plum; }
