--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -25,12 +25,10 @@ body {
 .grid-container {
   display: grid;
   grid-template-areas:
-    "ads-site-top      ads-site-top      ads-site-top      ads-site-top"
     "header            header            header            header"
     "graph             graph             graph             graph"
     "main              main              main              aside-top"
     "main              main              main              aside-bottom"
-    "ads-site-bottom   ads-site-bottom   ads-site-bottom   ads-site-bottom"
     "footer            footer            footer            footer";
   grid-row-gap: 1rem;
   grid-column-gap: 1rem;
@@ -38,11 +36,6 @@ body {
 
 .grid-container > * {
   border: 1px dashed navy;
-}
-
-.grid-ads-site-top {
-  grid-area: ads-site-top;
-  /* margin-bottom: -1rem; */
 }
 
 .grid-header {
@@ -64,10 +57,6 @@ body {
 
 .grid-aside-bottom {
   grid-area: aside-bottom;
-}
-
-.grid-ads-site-bottom {
-  grid-area: ads-site-bottom;
 }
 
 .grid-footer {
@@ -233,6 +222,36 @@ body {
   text-align: center;
 }
 
+/* --- settings form */
+
+.page-settings {
+  padding: 1rem;
+  border: 1px solid lightgray;
+  background-color: azure;
+}
+.page-settings > .option {
+  margin-bottom: 1rem;
+  /* border-bottom: 1px dotted lightgray; */
+}
+.page-settings .sub-option {
+  margin-top: 1rem;
+}
+.page-settings label {
+  white-space: nowrap;
+  display: inline-block;
+  width: 16rem;
+}
+.page-settings .sub-option {
+  padding-left: 1rem;
+  display: none;
+}
+.page-settings .sub-option label {
+  width: 15rem;
+}
+.page-settings input[type="checkbox"]:checked ~ .sub-option {
+  display: block;
+}
+
 /* temporary fix for ad container overflows */
 [id^=google_ads_iframe_] {
   max-width: 100%;
@@ -242,13 +261,11 @@ body {
   .grid-container {
     display: grid;
     grid-template-areas:
-      "ads-site-top"
       "header"
       "graph"
       "aside-top"
       "main"
       "aside-bottom"
-      "ads-site-bottom"
       "footer";
     grid-row-gap: 1rem;
     grid-column-gap: 1rem;
