--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -26,21 +26,28 @@ body {
   display: grid;
   grid-template-areas:
     "header            header            header            header"
+    "entrance          entrance          entrance          entrance"
     "graph             graph             graph             graph"
     "main              main              main              aside-top"
+    "main              main              main              aside-middle"
     "main              main              main              aside-bottom"
     "footer            footer            footer            footer";
-  grid-template-columns: auto auto auto 300px;
+  grid-template-columns: auto auto auto calc( 300px + 2rem );
   grid-row-gap: 1rem;
   grid-column-gap: 1rem;
 }
 
 .grid-container > * {
-  border: 1px dashed navy;
+  /* border: 1px dashed midnightblue; */
 }
 
 .grid-header {
   grid-area: header;
+}
+
+.grid-entrance {
+  grid-area: entrance;
+  padding: 1rem;
 }
 
 .grid-graph {
@@ -50,14 +57,22 @@ body {
 
 .grid-main {
   grid-area: main;
+  padding: 1rem;
 }
 
 .grid-aside-top {
   grid-area: aside-top;
+  padding: 1rem;
+}
+
+.grid-aside-middle {
+  grid-area: aside-middle;
+  padding: 1rem;
 }
 
 .grid-aside-bottom {
   grid-area: aside-bottom;
+  padding: 1rem;
 }
 
 .grid-footer {
@@ -66,30 +81,48 @@ body {
 
 /* --- site elements */
 
-.site-header {
-  /* padding: 1.5rem 0; */
-  /* background-color: midnightblue; */
-  /* color: snow; */
-}
-.site-header > h1 ,
-.site-header > p {
-  /* margin: 0; */
-}
-
 .navbar {
-  /* display: flex; */
-  /* justify-content: space-between; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 1rem;
+  background-color: midnightblue;
+  color: snow;
 }
-.navbar-brand {}
-.navbar-items {}
-.navbar-item {}
-.navbar-item.current {}
+.navbar a {
+  color: inherit;
+  text-decoration: none;
+}
+.navbar-brand h1,
+.navbar-brand p {
+  margin: 0;
+}
+.navbar-items {
+  display: block;
+  padding: 0;
+}
+.navbar-item {
+  display: inline-block;
+  margin-left: 0.5rem;
+}
+.navbar-item.current {
+  text-decoration: underline;
+}
 
 .timelines {
   /* position: fixed; */
   /* left: 10px; */
   /* right: 10px; */
   /* top: 10px; */
+}
+
+.sidebar-separator {
+  background-color: whitesmoke;
+  color: gray;
+  font-size: 87.5%;
+  text-align: center;
+  padding-top: 50vh;
+  padding-bottom: 50vh;
 }
 
 /* --- timeline */
@@ -230,12 +263,12 @@ form.page-settings {
   padding: 1rem;
   border: 1px solid lightgray;
   background-color: aliceblue;
-  font-family: monospace;
 }
 .page-settings > .option {
   display: flex;
   align-items: center;
   margin-bottom: 0.5rem;
+  font-family: monospace;
 }
 .page-settings > .option > label {
   flex-basis: 11rem;
@@ -249,10 +282,18 @@ form.page-settings {
 }
 .page-settings .current-value span {
   font-family: monospace;
-  background-color: navy;
+  background-color: midnightblue;
   color: aliceblue;
   border-radius: 10px;
   padding: 0 0.5rem;
+}
+.page-settings > .submit {
+  font-family: monospace;
+}
+
+.form-info {
+  border: 1px solid lightgray;
+  padding: 1rem;
 }
 
 /* --- small screen */
@@ -262,14 +303,20 @@ form.page-settings {
     display: grid;
     grid-template-areas:
       "header"
+      "entrance"
       "graph"
       "aside-top"
       "main"
+      "aside-middle"
       "aside-bottom"
       "footer";
     grid-template-columns: auto;
     grid-row-gap: 1rem;
     grid-column-gap: 1rem;
+  }
+  .sidebar-separator {
+    padding-top: 12.5vh;
+    padding-bottom: 12.5vh;
   }
   .timeline-items {
     display: block;
