--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,23 +1,15 @@
 /* --- base */
 
+:root {
+  --content-width: 960px;
+  --sidebar-width: 300px;
+  --grid-gap: 1rem;
+}
+
 body {
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
-}
-
-/* --- utilities  */
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-.clearfix::after {
-  display: block;
-  content: "";
-  clear:both;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -32,26 +24,36 @@ code {
   padding: 0 5px;
 }
 
-/* --- layout */
+/* --- utilities  */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+.clearfix::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+/* --- grid layout */
 
 .grid-container {
   display: grid;
   grid-template-areas:
-    "header            header            header            header"
-    "entrance          entrance          entrance          entrance"
-    "graph             graph             graph             graph"
-    "main              main              main              aside-top"
-    "main              main              main              aside-middle"
-    "main              main              main              aside-bottom"
-    "privacy           privacy           privacy           privacy"
-    "footer            footer            footer            footer";
-  grid-template-columns: auto auto auto calc( 300px + 2rem );
-  grid-row-gap: 1rem;
-  grid-column-gap: 1rem;
-}
-
-.grid-container > * {
-  /* border: 1px dashed midnightblue; */
+    "header      header       header       header"
+    ".           entrance     entrance          ."
+    ".           graph        graph             ."
+    ".           main         aside-top         ."
+    ".           main         aside-middle      ."
+    ".           main         aside-bottom      ."
+    "privacy     privacy      privacy     privacy"
+    "footer      footer       footer       footer";
+  grid-template-columns: 1fr minmax(min-content, calc( var(--content-width) - var(--sidebar-width) - var(--grid-gap) )) var(--sidebar-width) 1fr;
+  grid-row-gap: var(--grid-gap);
+  grid-column-gap: var(--grid-gap);
 }
 
 .grid-header {
@@ -60,42 +62,41 @@ code {
 
 .grid-entrance {
   grid-area: entrance;
-  padding: 0 1rem;
 }
 
 .grid-graph {
   grid-area: graph;
-  padding: 0 1rem;
 }
 
 .grid-main {
   grid-area: main;
-  padding: 0 1rem;
 }
 
 .grid-aside-top {
   grid-area: aside-top;
-  padding: 0 1rem;
 }
 
 .grid-aside-middle {
   grid-area: aside-middle;
-  padding: 0 1rem;
 }
 
 .grid-aside-bottom {
   grid-area: aside-bottom;
-  padding: 0 1rem;
 }
 
 .grid-privacy {
-  padding: 0 1rem;
   grid-area: privacy;
 }
 
 .grid-footer {
-  padding: 0 1rem;
   grid-area: footer;
+}
+
+/* --- other layout */
+
+.container {
+  max-width: var(--content-width);
+  margin: 0 auto;
 }
 
 /* --- site elements */
@@ -142,6 +143,22 @@ code {
   text-align: center;
   padding-top: 50vh;
   padding-bottom: 50vh;
+}
+
+.privacy-matters-wrapper {
+  background-color: whitesmoke;
+  padding: 2rem 1rem;
+  margin-bottom: -1rem;
+}
+.privacy-matters-wrapper ul {
+  margin: 0;
+}
+
+.outro {
+  background-color: lightgray;
+  padding: 2rem 1rem;
+  color: darkslategray;
+  text-align: center;
 }
 
 /* --- timeline */
@@ -282,7 +299,6 @@ form.page-settings {
   padding: 1rem;
   border: 1px solid lightgray;
   background-color: aliceblue;
-  max-width: 768px;
 }
 .page-settings > .option {
   display: flex;
@@ -322,22 +338,23 @@ form.page-settings {
   .grid-container {
     display: grid;
     grid-template-areas:
-      "header"
-      "entrance"
-      "graph"
-      "aside-top"
-      "main"
-      "aside-middle"
-      "aside-bottom"
-      "privacy"
-      "footer";
-    grid-template-columns: auto;
-    grid-row-gap: 1rem;
-    grid-column-gap: 1rem;
+      "header      header      header"
+      ".           entrance         ."
+      ".           graph            ."
+      ".           aside-top        ."
+      ".           main             ."
+      ".           aside-middle     ."
+      ".           aside-bottom     ."
+      "privacy     privacy     privacy"
+      "footer      footer      footer";
+    grid-template-columns: 1fr auto 1fr;
   }
   .sidebar-separator {
-    padding-top: 12.5vh;
-    padding-bottom: 12.5vh;
+    padding-top: 50vh;
+    padding-bottom: 50vh;
+  }
+  form.page-settings {
+    padding: 0.75rem;
   }
   .timeline-items {
     display: block;
