--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -33,6 +33,16 @@ code {
   padding: 0 5px;
 }
 
+a {
+  color: steelblue;
+}
+a:hover{
+  color: royalblue;
+}
+a:visited{
+  color: indigo;
+}
+
 form {
   margin-bottom: 1.5rem;
 }
@@ -136,7 +146,10 @@ form {
 }
 .navbar-item {
   display: inline-block;
-  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+.navbar-item:last-child {
+  margin-right: 0;
 }
 .navbar-item.current {
   text-decoration: underline;
@@ -161,16 +174,21 @@ form {
   background-color: whitesmoke;
   padding: 2rem 1rem;
   margin-bottom: -1rem;
+  border-top: 1px solid lightgray;
+  text-align: center;
 }
 .privacy-matters-wrapper ul {
   margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .outro {
-  background-color: lightgray;
+  background-color: whitesmoke;
   padding: 2rem 1rem;
   color: darkslategray;
   text-align: center;
+  border-top: 1px solid lightgray;
 }
 
 /* === timeline */
@@ -384,5 +402,11 @@ form.page-settings {
     max-width: 5rem;
     overflow: hidden;
     text-overflow: ellipsis;
+  }
+
+  .navbar {
+    flex-flow: column;
+    align-items: unset;
+    padding: 1rem 1rem;
   }
 }
