--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -33,6 +33,12 @@ code {
   padding: 0 5px;
 }
 
+hr {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0));
+}
+
 a {
   color: steelblue;
 }
@@ -45,6 +51,23 @@ a:visited{
 
 form {
   margin-bottom: 1.5rem;
+}
+
+button {
+  -webkit-appearance: none;
+  font-family: monospace;
+  background-color: transparent;
+  border: none;
+  padding: .5rem .5rem;
+  margin: 3px 0 0;
+  line-height: 1;
+  color: midnightblue;
+}
+button:focus {
+  outline: solid 1px rgba(218, 165, 32, .25);
+}
+button svg {
+  display: block;
 }
 
 /* === utilities  */
@@ -189,6 +212,40 @@ form {
   color: darkslategray;
   text-align: center;
   border-top: 1px solid lightgray;
+}
+
+.pin-title {
+  position: relative;
+}
+
+.pin-button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  /* border-radius: 16px; */
+}
+
+.grid-graph.pinned {
+  position: sticky;
+  top: 1rem;
+  background-color: white;
+  border: 1px solid midnightblue;
+  padding: 1rem;
+  z-index: 1;
+}
+
+.form-wrapper.pinned {
+  position: sticky;
+  top: calc( 100% - 19rem );
+  padding: 1rem;
+  border: 1px solid midnightblue;
+  background-color: white;
+}
+
+.grid-graph.pinned .pin-button,
+.form-wrapper.pinned .pin-button {
+  /* background-color: midnightblue; */
+  border: 1px solid midnightblue;
 }
 
 /* === timeline */
@@ -351,6 +408,15 @@ form.page-settings {
 .page-settings > .submit {
   margin-top: 1rem;
   font-family: monospace;
+}
+
+.submit button {
+  border: 1px solid midnightblue;
+  border-radius: 4px;
+  background-color: whitesmoke;
+}
+.submit button:hover {
+  background-color: white;
 }
 
 .form-info,
