--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  line-height: 1.25;
+  line-height: 1.4;
 }
 
 code {
@@ -239,6 +239,13 @@ button svg {
 
 .grid-graph.pinned .pin-button {
   border: 1px solid lightgray;
+}
+
+.warning-box {
+  padding: 1rem;
+  background-color: lemonchiffon;
+  border: 1px solid darkkhaki;
+  border-radius: 4px;
 }
 
 /* === timeline */
