--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -245,7 +245,19 @@ button svg {
   padding: 1rem;
   background-color: lemonchiffon;
   border: 1px solid darkkhaki;
-  border-radius: 4px;
+  border-radius: 0.25rem;
+}
+
+.error-box {
+  padding: 1rem;
+  background-color: mistyrose;
+  border: 1px solid pink;
+  border-radius: 0.25rem;
+}
+
+.grid-entrance .error-box {
+  position: sticky;
+  top: 0;
 }
 
 /* === timeline */
