Fixed firefox monospace font hor. scroll bug
- Changed monospace font containers
- Updated npm start script to wattch files from docs dir

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -12,6 +12,7 @@
   --color-slotOnload: gold;
   --color-slotVisibilityChanged: pink;
   --color-impressionViewable: deeppink;
+  --font-stack-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 body {
@@ -31,7 +32,8 @@ p {
 }
 
 code {
-  font-family: monospace;
+  font-family: var(--font-stack-monospace);
+  font-size: 87.5%;
   background-color: whitesmoke;
   border: 1px dotted lightgray;
   white-space: nowrap;
@@ -60,7 +62,6 @@ form {
 
 button {
   -webkit-appearance: none;
-  font-family: monospace;
   background-color: transparent;
   border: none;
   padding: .5rem .5rem;
@@ -202,7 +203,6 @@ button:focus {
   line-height: 250px;
   width: 100%;
   max-width: 300px;
-  font-family: monospace;
 }
 
 .sidebar-separator {
@@ -295,7 +295,6 @@ button.pin-button {
 /* === timeline */
 
 .timeline-container {
-  font-family: monospace;
   margin-bottom: 1rem;
   padding: 2rem 0;
   border: 1px dotted lightgray;
@@ -343,7 +342,6 @@ button.pin-button {
   padding: 0 calc( var(--timeline-size) * 0.375 );
   border-radius: calc( var(--timeline-size) / 2 );
   text-align: center;
-  font-family: monospace;
   font-size: 50%;
   background-color: snow;
   color: darkslategray;
@@ -404,7 +402,7 @@ button.pin-button {
   transform-origin: calc( var(--timeline-size) * 1 ) center;
   transform: rotate(-15deg);
   border: 1px dotted lightgray;
-  padding: 0 1px;
+  padding: 0 4px;
   background-color: snow;
   white-space: nowrap;
   cursor: default;
@@ -424,12 +422,12 @@ form.page-settings {
   padding: 1rem;
   border: 1px solid lightgray;
   background-color: aliceblue;
+  font-size: 87.5%;
 }
 .page-settings > .option {
   display: flex;
   align-items: center;
   margin-bottom: 0.5rem;
-  font-family: monospace;
 }
 .page-settings > .option > label {
   flex-basis: 11rem;
@@ -442,7 +440,6 @@ form.page-settings {
   opacity: 0.5;
 }
 .page-settings .current-value span {
-  font-family: monospace;
   background-color: midnightblue;
   color: aliceblue;
   border-radius: 10px;
@@ -450,7 +447,6 @@ form.page-settings {
 }
 .page-settings > .submit {
   margin-top: 1rem;
-  font-family: monospace;
 }
 
 .submit button {
